Resolve #AG146 - Ensure that view-ticket pages have no horizontal scrolling

--- a/Agiil.Web/Content/Scss/_RichDescriptions.scss
+++ b/Agiil.Web/Content/Scss/_RichDescriptions.scss
@@ -1,6 +1,8 @@
 ﻿@import '_AppWideVariables';
 
 @mixin rich_description {
+  word-break: break-all;
+  
   ul {
     padding-left: 1.6em;
     list-style: disc outside;
@@ -21,6 +23,8 @@
   pre {
     @extend %subtle_box;
     padding: 0.2em;
+    overflow: auto;
+    max-width: calc(100% - 0.4em - 2px);
     
     code {
       background: transparent none;
